# 2D-platform-game

./: CMakeLists.txt
common/: character_fragment.shader  fragment.shader
src/: character.cpp  character_action.cpp  configuration_manager.cpp  main.cpp  rectangle.cpp  scrolling_background.cpp  shader.cpp
src/include/: character.h  character_action.h  configuration_manager.h  game_constants.h  rectangle.h  scrolling_background.h  shader.h
